--- a/MARVEL APP/Scenes/Search/View/Cell/SearchTableViewCell.xib
+++ b/MARVEL APP/Scenes/Search/View/Cell/SearchTableViewCell.xib
@@ -35,14 +35,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zN4-NM-0ZO">
-                                <rect key="frame" x="332" y="30" width="24" height="50"/>
+                                <rect key="frame" x="292" y="30" width="64" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="xNh-Tt-X6r"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain"/>
+                                <buttonConfiguration key="configuration" style="plain" image="favorite2"/>
                                 <connections>
-                                    <action selector="favoriteButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="0X4-PP-pot"/>
+                                    <action selector="TappedFavoriteButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="CB0-iY-PtH"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -80,14 +80,15 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
-                <outlet property="favoriteButton" destination="zN4-NM-0ZO" id="qyb-fk-LFt"/>
-                <outlet property="searchImage" destination="5ku-Lg-adi" id="QJg-oy-DQi"/>
-                <outlet property="searchLabel" destination="cfT-7o-vQg" id="96O-22-HXa"/>
+                <outlet property="favoriteButton" destination="zN4-NM-0ZO" id="FYJ-Nv-cwm"/>
+                <outlet property="searchImage" destination="5ku-Lg-adi" id="J1H-LQ-E6a"/>
+                <outlet property="searchLabel" destination="cfT-7o-vQg" id="v4k-4T-L3G"/>
             </connections>
             <point key="canvasLocation" x="76.92307692307692" y="49.763033175355446"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="Iro_Man" width="1080" height="1920"/>
+        <image name="favorite2" width="40" height="40"/>
     </resources>
 </document>
