--- a/MARVEL APP/Scenes/favourite/view/favorite.storyboard
+++ b/MARVEL APP/Scenes/favourite/view/favorite.storyboard
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -12,13 +10,13 @@
         <!--Favorite character-->
         <scene sceneID="zMh-cK-RBM">
             <objects>
-                <viewController restorationIdentifier="favouriteListVc" storyboardIdentifier="favouriteListVc" id="8ZI-4W-VOZ" customClass="favouriteListVc" customModule="MARVEL_APP" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="favouriteListVc" storyboardIdentifier="favouriteListVc" id="8ZI-4W-VOZ" customClass="FavouriteListVC" customModule="MARVEL_APP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YcD-PY-lIO">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="j4i-Dl-xTh">
-                                <rect key="frame" x="0.0" y="83" width="393" height="686"/>
+                                <rect key="frame" x="0.0" y="49" width="600" height="502"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="8ZI-4W-VOZ" id="bzq-di-bEC"/>
